--- a/index.html
+++ b/index.html
@@ -31,57 +31,50 @@
   <div data-placement-id="fd2e0242-462e-48a9-8056-df116f07f84c" data-container="exco-placement"> </div>
  
   <header class="header">
-    <div class="container logo-info">
-      <div class="logo-block">
-        <img class="logo-image" src="img/logo_kp11.png" alt="ГАПОУ КП 11">
-        <div class="logo-text">
-          <h1 class="logo-title">ГАПОУ КП 11</h1>
-        </div> 
-      </div>
-    </div>
+    
     <nav class="nav-menu">
-      <ul class=" container menu-list">
-        <li class="menu-item">
-          <a class="menu-link" href="#">Главная</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#"><span>о КП 11</span></a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Контакты</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Подразделения</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Направления</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Поступающим</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Регистрация</a>
-        </li>
-      </ul>
+      <div class="nav-info">
+        <div class="logo-block">
+          <img class="logo-image" src="img/logo_kp11.png" alt="ГАПОУ КП 11">
+          <div class="logo-text">
+            <h1 class="logo-title">ГАПОУ КП 11</h1>
+          </div> 
+        </div>
+        <ul class="menu-list">
+          <li class="menu-item">
+            <a class="menu-link" href="#">Главная</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#"><span>Инфо</span></a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#">Подразделения</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#">Поступающим</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#">Трансляции</a>
+          </li>
+        </ul>
+      </div>  
     </nav>
+  </header>
+  <main class="main-content" id="main">
     <div class="offer-area">
       <div class="offer-wrapper">
-        <img src="img/fon.jpg" alt="Гуманитарно-педагогическая академия (филиал) 
-            федерального государственного автономного образовательного учреждения высшего образования" class="offer-bg-image">
+        <img src="img/fon.jpg" alt="Добро пожаловать на портал колледжа предпринимательства № 11 для проведения онлайн дней открытых дверей" class="offer-bg-image">
         <div class="img-overlay">
           <a class="introduction">
-            Добро пожаловать на портал государственного автономного профессионального образовательноого учреждения города Москвы «Колледж предпринимательства № 11
+            Добро пожаловать на портал колледжа предпринимательства № 11 для проведения онлайн дней открытых дверей
           </a> 
-          <a class="button custom-btn btn-3" href="https://dod.mcrpo.ru/dod/detail_day/426"  rel="noopener noreferrer"> Подробнее </a>
+          <!-- <a class="button custom-btn btn-3" href="https://dod.mcrpo.ru/dod/detail_day/426"  rel="noopener noreferrer"> Подробнее </a> -->
         </div>
       </div>
     </div>
-  </header>
-  <main class="main-content" id="main">
     <!-- <iframe class="video-clip" src="https://vk.com/video_ext.php?oid=-16137631&id=456239179&hash=2f1cd872b084a455&hd=2"  allowfullscreen></iframe>  -->
     <div class="container main-content">
       
-      </div>
       <article class="articles-blocks">
         <h2 class="artucle-sections-title">Наши Подразделения</h2>
         <div class="sections-wrapper">
